--- a/index.html
+++ b/index.html
@@ -89,9 +89,11 @@
         <div class="col-md-6">
           <p class="hero-title">Bugün Kendin İçin Ne Yaptın ?</p>
           <p class="fs-6">Bugün bir adım at ve kendine yatırım yap. Sağlıklı bir yaşam için bize başvuran yüzlerce kişi
-            arsına sen de katıl. Beraber sana daha iyi bir hayat inşa edelim.
+            arasına sen de katıl. Beraber sana daha iyi bir hayat inşa edelim.
           </p>
-          <button type="button" class="btn btn-outline-light">Hemen Bize Ulaş</button>
+          <a target="_blank" href="https://wa.me/905350268243?text=Merhaba%20sitenizden%20size%20ulaşıyorum">
+            <button type="button" class="btn btn-outline-light">Hemen Bize Ulaş</button>
+          </a>
         </div>
         <div class="col-md-6">
           <img src="./src/images/picture.png" class="img-fluid">
@@ -364,6 +366,9 @@
       <p class="copyright">
         Copyright © 2021 by Doğa Beslenme ve Fizyoterapi Danışmanlığı
       </p>
+      <div class="copyright">We use some icons made by <a href="https://www.flaticon.com/authors/smashicons"
+          title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
+          title="Flaticon">www.flaticon.com</a></div>
     </div>
   </section>
 
