--- a/about.html
+++ b/about.html
@@ -18,8 +18,8 @@
   <section id="nav-bar">
     <nav class="navbar navbar-expand-lg navbar-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
-          Doğa Sağlıklı Yaşam Merkezi
+        <a class="navbar-brand" href="index.html">
+          <img src="./src/images/logo.svg" width="45">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -129,8 +129,8 @@
         </p>
 
         <p class="bio-p">Doğa, kalıcı değişimlerin yaşandığı yerdir. Buraya gelenler hayatlarında zorlanmadan
-          yapacakları değişikliklere yönlendirilirler. Yaptıkları tüm sağlıklı seçimler onlara. Böylece, vücutları için
-          hedefledikleri noktaya ilerlerken nasıl sağlıklı yaşayacaklarını da öğrenmiş olurlar. Danışmanlık hizmeti
+          yapacakları değişikliklere yönlendirilirler. Böylece, vücutları için hedefledikleri noktaya ilerlerken nasıl
+          sağlıklı yaşayacaklarını da öğrenmiş olurlar. Danışmanlık hizmeti
           almayı bıraktıktan sonra da gelişmeyi sürdürebilirler.
         </p>
       </div>
@@ -181,26 +181,38 @@
     <div class="container">
       <div class="row">
         <div class="col-md-4 footer-box">
-          <p><b>Doğa Sağlıklı Yaşam Merkezi</b></p>
-          <p>Salt Diyetisyenliği kabul etmeyen Diyetisyen Tunahan Berber, danışanlarına “Sağlıklı Beslenme ve Yaşam”
-            temalı mutlu ve eğlenceli bir hayatın anahtarını veriyor.</p>
+          <p class="footer-title"><b>Doğa Beslenme ve Fizyoterapi Danışmanlığı</b></p>
+          <p class="footer-description">Doğa’da sizi daha iyi bir yaşam imkânı bekliyor! Diyetlerinde yasak koymayı
+            sevmeyen Diyetisyen Tunahan
+            Berber ve sizin içinizde hep var olan gücü çıkarmanıza yardımcı olan Fizyoterapist Ömer Öztürk ile daha
+            sağlıklı ve mutlu bir yaşamın anahtarı elinizde. </p>
         </div>
         <div class="col-md-4 footer-box">
           <p><b>Bize Ulaşın</b></p>
-          <p><i class="fa fa-map-marker"></i>Kütahya,Türkiye</p>
-          <p><i class="fa fa-phone"></i>+90 502000000</p>
-          <p><i class="fa fa-envelope-o"></i>dogsaglik@email.com</p>
+          <p>
+            <i class="fa fa-map-marker"></i>
+            Servi Mah, Derbent Sk, Twin Ofis B blok, Daire 7 Kütahya,Türkiye
+          </p>
+          <p><i class="fa fa-phone"></i>+90 535 026 82 43 | +90 539 641 35 99</p>
+          <p><i class="fa fa-envelope-o"></i>dogasaglikliyasam@gmail.com</p>
         </div>
         <div class="col-md-4 footer-box">
-          <p><b>E-bültenimize Ücretsiz Abone Olun!</b></p>
-          <input type="email" class="form-control" placeholder="E-posta adresiniz">
-          <button type="button" class="btn btn-outline-light">Kayıt Ol!</button>
+          <div id="map-container-google-1" class="z-depth-1-half map-container" style="width: 100%; height: 200px;">
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d770.5348715491731!2d29.98498471289749!3d39.42097015260786!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x2b5c1dd8add19eff!2zRG_En2EgQmVzbGVubWUgdmUgRml6eW90ZXJhcGkgRGFuxLHFn21hbmzEscSfxLE!5e0!3m2!1sen!2str!4v1611257253253!5m2!1sen!2str"
+              frameborder="0" style="border:0; width: 100%; height: 100%;" allowfullscreen></iframe>
+          </div>
         </div>
+
       </div>
+
       <hr>
       <p class="copyright">
-        Copyright © 202 by Doğa Sağlıklı Yaşam Merkezi
+        Copyright © 2021 by Doğa Beslenme ve Fizyoterapi Danışmanlığı
       </p>
+      <div class="copyright">We use some icons made by <a href="https://www.flaticon.com/authors/smashicons"
+          title="Smashicons">Smashicons</a> from <a href="https://www.flaticon.com/"
+          title="Flaticon">www.flaticon.com</a></div>
     </div>
   </section>
 
