--- a/fizyoterapi/evdefizyoterapi.html
+++ b/fizyoterapi/evdefizyoterapi.html
@@ -38,9 +38,9 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="./manuelterapi.html">Manuel Terapi</a></li>
-                                <li><a class="dropdown-item" href="./klinikpilates.html">Klinik Pilates</a>
+                                <li><a class="dropdown-item" href="./klinikpilates.html">Klinik Pilates</a></li>
+                                <li><a class="dropdown-item disabled" href="./grastonteknigi.html">Graston Tekniği</a>
                                 </li>
-                                <li><a class="dropdown-item" href="./grastonteknigi.html">Graston Tekniği</a></li>
                                 <li><a class="dropdown-item" href="./kinezyolojikbantlama.html">Kinezyolojik
                                         Bantlama</a></li>
                                 <li><a class="dropdown-item" href="./sporcurehabilitasyonu.html">Sporcu
@@ -49,7 +49,7 @@
                                         Rehabilitasyon</a></li>
                                 <li><a class="dropdown-item" href="./norolojikrehabilitasyon.html">Nörolojik
                                         Rehabilitasyon</a></li>
-                                <li><a class="dropdown-item disabled" href="./ortopedikrehabilitasyon.html">Ortopedik
+                                <li><a class="dropdown-item" href="./ortopedikrehabilitasyon.html">Ortopedik
                                         Rehabilitasyon</a></li>
                                 <li><a class="dropdown-item" href="./pulmonerrehabilitasyon.html">Pulmoner
                                         rehabilitasyon</a></li>
@@ -90,13 +90,13 @@
     <!-------------------------------Hero Section---------------------------------------------->
     <section id="hero">
         <div class="container text-center">
-            <p class="hero-title">Ortopedik Rehabilitasyon</p>
+            <p class="hero-title">Evde Fizik Tedavi</p>
             <ul class="breadcrumb" style=" align-items: center; justify-content: center;">
                 <li><a href="../index.html">Anasayfa</a></li>
                 <li>/</li>
                 <li>Fizyoterapi</li>
                 <li>/</li>
-                <li>Ortopedik Rehabilitasyon</li>
+                <li>Evde Fizik Tedavi</li>
             </ul>
             </p>
         </div>
@@ -112,70 +112,62 @@
 
     <section id="description">
         <div class="container service-container">
-            <h1>Ortopedik Rehabilitasyon Nedir ?</h1>
+            <h1>Evde Fizik Tedavi</h1>
+
             <div class="divider div-transparent div-dot"></div>
-            <p>
-                Ortopedik rehabilitasyon, fizik tedavi ve rehabilitasyonun özelleşmiş bir alt birimi olup kas ve iskelet
-                sistemindeki bir çok hastalığın tedavisinde, bilimsel temellere dayanan tedavi seçenekleri
-                sunar.Ortopedik rehabilitasyon programı ile amaç, kas ve eklem sertliklerini gidermek, hastanın
-                fonksiyonelliğini en üst düzeye çıkarmak, normal aktivite seviyesini yeniden kazandırmaktır.
-            </p>
 
             <p>
-                Ortopedik problemler çeşitli durumlarda ortaya çıkabilir. Yumuşak dokularda hasarlanma, kemik kırıkları
-                veya kireçlenmenin ileri dönemlerinde cerrahi işlem sonrası,rehabilitasyon gerektiren sorunlar
-                görülebilir. Rehabilitasyon programında uzun süreli ya da kısa süreli programlar uygulanmaktadır. Bunlar
-                hastanın kendi durumuna göre çeşitlilik ve farklılık gösterebilmektedir.Cerrahi girişimi gerektiren
-                ortopedik tedavilerde cerrahi öncesi ve sonrası olarak iki ayrı tedavi oluşturulur.
+                Evde fizik tedavide amaç, hastanın daha kısa bir süre içerisinde eski durumuna dönmesidir. Bundan dolayı
+                hasta yakından takip edilir ve farklı birçok materyal ve model kullanılarak hastanın sağlığına kavuşması
+                sağlanır.
             </p>
 
             <div class="text-center">
                 <br />
-                <img src="/src/images/ortopedik@3x.png" class="img-fluid" width="500px" />
+                <img src="/src/images/evde.png" class="img-fluid" width="180px" />
                 <br /><br /><br />
             </div>
+            <br /><br />
+            <h2>
+                Evde Fizik Tedavinin Uygulandığı Hasta Grupları
+            </h2>
+            <div class="divider div-transparent div-dot"></div>
+
+            <br />
+            <p>
+                MS (Multiple Skleroz) ve felç hastaları; kalça-diz protezleri, ön çapraz bağ ameliyatları ve kalça
+                kırığı gibi ortopedik hastalıkları olanlar; omurilik yaralanmaları ve Parkinson hastalıkları; yürüme
+                zayıflığı yaşayanlar ve kasları zayıflayan geriatrik hastalıkları olanlar için evde fizik tedavi
+                uygulamaları yapılmaktadır. Ayrıca yoğun bakım sonrası dönemde, kanser rehabilitasyonlarında, ALS, bel
+                ve boyun fıtıkları, cerebral palsy, kan hastalıkları, ön çapraz bağ ameliyatları, spina bfida,
+                tortikolis gibi hastalıklardan sonra da evde fizik tedavi alınabilir.
+            </p>
 
             <p>
-                Ortopedik rehabilitasyonun en sık uygulandığı durumlar şunlardır
+                Evde yapılan fizik tedavi, hastaya rahatlık ve güvenlik hissini yaşatır.
             </p>
-            <br />
-            <ul>
-                <li>
-                    <p>
-                        Kırık Ve Çıkık Tedavisi
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Artroplasti (Protez) Rehabilitasyonu
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Ampute Rehabilitasyonu
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Skolyoz (Omurga Eğrilikleri)
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Bağ Yaralanmaları
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Menisküs Yırtıkları
-                    </p>
-                </li>
-                <li>
-                    <p>
-                        Burkulmalar, ezilmeler, kas ve tendon zorlanmaları
-                    </p>
-                </li>
-            </ul>
+
+            <p>
+                Evde fizik tedavide hastanın durumuna göre özel bir ortam oluşturulur. Hastaneye gitmekte zorlanan
+                hastalar için evde alınan fizik tedavi, oldukça pratiktir ve birtakım zorlukları ortadan kaldırır.
+            </p>
+
+            <p>
+                Evde fizik tedavi almak oldukça zahmetsiz ve konforludur.
+            </p>
+            <p>
+                İyileşme süreci daha hızlıdır.
+            </p>
+            <p>
+                Zamandan tasarruf sağlar.
+            </p>
+            <p>
+                Uzun süre bekleme derdi yoktur. Hastanelerden alınan randevular, hastanın uzun süre beklemesine neden
+                olurken evde alınan fizik tedavide bekleme derdi yoktur.
+            </p>
+        </div>
+        </div>
+
         </div>
     </section>
 
