--- a/fizyoterapi/manuelterapi.html
+++ b/fizyoterapi/manuelterapi.html
@@ -169,8 +169,7 @@
                 <a>
                     <img src="https://img.icons8.com/color/48/000000/twitter.png" />
                 </a>
-                <a target="_blank"
-                    href="https://wa.me/905438666354?text=I'm%20interested%20in%20your%20car%20for%20sale">
+                <a target="_blank" href="https://wa.me/905396413599?text=Merhaba%20sitenizden%20size%20ulaşıyorum">
                     <img src="https://img.icons8.com/color/48/000000/whatsapp--v1.png" />
                 </a>
             </div>
