--- a/index.html
+++ b/index.html
@@ -158,11 +158,11 @@
         </div>
         <div class="col-md-4 services">
           <img src="./src/images/evde.png" class="service-img">
-          <a href="#">
+          <a href="./fizyoterapi/evdefizyoterapi.html">
             <h4>Evde Sağlık Hizmeti</h4>
           </a>
-          <p class="fs-6">Manuel terapi konusunda eğitimli fizyoterapist ve doktorlar tarafından hiçbir cihaza ihtiyaç
-            duymadan el ile uygulanan bir tedavi yöntemidir.
+          <p class="fs-6">
+            Evde fizik tedavide amaç, hastanın daha kısa bir süre içerisinde eski durumuna dönmesidir.
           </p>
         </div>
         <div class="col-md-4 services">
