evde saglik hizmeti

--- a/diyet/hastalıklardabeslenme.html
+++ b/diyet/hastalıklardabeslenme.html
@@ -43,6 +43,9 @@
                                 </li>
                                 <li><a class="dropdown-item" href="../fizyoterapi/grastonteknigi.html">Graston
                                         Tekniği</a></li>
+                                <li><a class="dropdown-item" href="../fizyoterapi/evdefizyoterapi.html">Evde
+                                        Sağlık
+                                        Hizmeti</a></li>
                                 <li><a class="dropdown-item"
                                         href="../fizyoterapi/kinezyolojikbantlama.html">Kinezyolojik
                                         Bantlama</a></li>
