--- a/fizyoterapi/evdefizyoterapi.html
+++ b/fizyoterapi/evdefizyoterapi.html
@@ -39,8 +39,10 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" href="./manuelterapi.html">Manuel Terapi</a></li>
                                 <li><a class="dropdown-item" href="./klinikpilates.html">Klinik Pilates</a></li>
-                                <li><a class="dropdown-item disabled" href="./grastonteknigi.html">Graston Tekniği</a>
+                                <li><a class="dropdown-item" href="./grastonteknigi.html">Graston Tekniği</a>
                                 </li>
+                                <li><a class="dropdown-item disabled" href="./evdefizyoterapi.html">Evde Sağlık
+                                        Hizmeti</a></li>
                                 <li><a class="dropdown-item" href="./kinezyolojikbantlama.html">Kinezyolojik
                                         Bantlama</a></li>
                                 <li><a class="dropdown-item" href="./sporcurehabilitasyonu.html">Sporcu
