--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
       <div class="row text-center">
         <div class="col-md-4 services">
           <img src="./src/images/icons/021-diet.png" class="service-img">
-          <a href="/diyet/onlinediet.html">
+          <a target="_blank" href="/diyet/onlinediet.html">
             <h4>Online Diyet</h4>
           </a>
           <p class="fs-6">Online diyet hizmetimiz ile dünyanın neresinde olursanız olun kilo hedeflerinize ulaşmanıza
@@ -141,7 +141,7 @@
         </div>
         <div class="col-md-4 services">
           <img src="./src/images/icons/024-scale-1.png" class="service-img">
-          <a href="/diyet/yuzyuzediyet.html">
+          <a target="_blank" href="/diyet/yuzyuzediyet.html">
             <h4>Yüz Yüze Diyet</h4>
           </a>
           <p class="fs-6">Yüz yüze diyet seçeneğimizde, ofisimize gelme imkânı olan danışanlarımız ile birebir
@@ -150,7 +150,7 @@
         </div>
         <div class="col-md-4 services">
           <img src="./src/images/icons/022-healthy.png" class="service-img">
-          <a href="/diyet/cocukveergenbeslenmesi.html">
+          <a target="_blank" href="/diyet/cocukveergenbeslenmesi.html">
             <h4>Çocuk ve Ergen Beslenmesi</h4>
           </a>
           <p class="fs-6"> Çocuk ve aile ile birlikte oluşturulacak bir beslenme programı ile büyüme çağında yeterli
@@ -161,7 +161,7 @@
       <div class="row text-center">
         <div class="col-md-4 services">
           <img src="./src/images/pilates.png" class="service-img">
-          <a href="/fizyoterapi/klinikpilates.html">
+          <a target="_blank" href="/fizyoterapi/klinikpilates.html">
             <h4>Klinik Pilates</h4>
           </a>
           <p class="fs-6">Pilates, Joseph Pilates tarafından kasları güçlendirmek, esnekliği arttırmak ve vücudun genel
@@ -170,7 +170,7 @@
         </div>
         <div class="col-md-4 services">
           <img src="./src/images/evde.png" class="service-img">
-          <a href="./fizyoterapi/evdefizyoterapi.html">
+          <a target="_blank" href="/fizyoterapi/evdefizyoterapi.html">
             <h4>Evde Sağlık Hizmeti</h4>
           </a>
           <p class="fs-6">
@@ -179,7 +179,7 @@
         </div>
         <div class="col-md-4 services">
           <img src="./src/images/manuel.png" class="service-img">
-          <a href="/fizyoterapi/manuelterapi.html">
+          <a target="_blank" href="/fizyoterapi/manuelterapi.html">
             <h4>Manuel Terapi</h4>
           </a>
           <p class="fs-6">Manuel terapi konusunda uzman,
